[tool.poetry]
name = "zeldaclone"
version = "0.1.0"
description = ""
authors = ["stanluuk31 <467804@student.saxion.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"
numpy = "^1.26.4"
zero = "^0.9.2"
pgzero = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
